--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,11 @@ $navbar-default-bg: #000000;
   padding-top: 15px;
   padding-bottom: 15px;
 }
+
+.listing {
+  list-style: none;
+  padding: 0px;
+}
 .footer {
   margin-top: 45px;
   padding-top: 5px;
